# trac_r

./: .gitignore  AGENT.md  README.md  pyproject.toml
doc/: READMEFIRST.md  cloud_sync.md  dashboard_frontend.md  dashboard_server.md  data_formats.md  overview.md  tracker.md
src/trac_r/: dashboard.py  tracker.py  utils.py
src/trac_r/static/: index.html
tests/: test_training.py
